--- a/Statistics/Lecture6.ipynb
+++ b/Statistics/Lecture6.ipynb
@@ -77,12 +77,17 @@
     "## Estimating KL Divergence\n",
     "$$\n",
     "\\begin{align} \n",
-    "\\text {KL}(P_{\\theta ^*}, P_{{\\theta }}) = & \\sum _{x\\in E} p_{\\theta ^*} \\ln \\frac{p_{\\theta ^*}(X)}{p_{{\\theta }}(X)}= & \\mathbb {E}_{\\theta ^*}[\\ln (\\frac{p_{\\theta ^*}(X)}{p_{\\theta}(X)}) ]= & \\mathbb {E}_{\\theta ^*}[\\ln p_{\\theta ^*}(X) ] - \\mathbb {E}_{\\theta ^*}[\\ln p_\\theta (X)] \n",
+    "KL(P_{\\theta ^*}, P_{{\\theta }}) &= \\mathbb {E}_{\\theta ^*}[\\ln (\\frac{p_{\\theta ^*}(X)}{p_{\\theta}(X)}) ]=\\sum _{x \\in E} p_{\\theta ^*} \\ln p_{\\theta ^*}(x) - \\sum _{x \\in E} p_{\\theta ^*} \\ln p_{\\theta }(x)\\\\\n",
+    "&= \\mathbb {E}_{\\theta ^*}[\\ln p_{\\theta ^*}(X) ] - \\mathbb {E}_{\\theta ^*}[\\ln p_\\theta (X)]\n",
     "\\end{align}\n",
     "$$\n",
-    "$$KL(P_{θ^∗},P_θ)=\\sum _{x \\in E} p_{\\theta ^*} \\ln p_{\\theta ^*}(x) - \\sum _{x \\in E} p_{\\theta ^*} \\ln p_{\\theta }(x)$$\n",
+    "So the function $θ \\mapsto KL(P_{θ^∗},P_θ)$ is of the form: (since the first term dose not depend on $\\theta$.)\n",
+    "$$ 'constant' - \\mathbb {E}_{\\theta ^*}[\\ln p_\\theta (X)]$$\n",
+    "By the law of large numbers, $\\displaystyle \\frac{1}{n} \\sum _{i = 1}^ n \\ln (p_\\theta (X_ i)) \\to \\mathbb {E}_{\\theta ^*}[\\ln p_\\theta ]$ in probability\n",
+    "$$\\hat{\\text {KL}}(P_{\\theta ^*}, P_\\theta ) := \\mathbb {E}_{\\theta ^*}[\\ln p_{\\theta ^*}(X) ] - \\displaystyle \\frac{1}{n} \\sum _{i = 1}^ n \\ln (p_\\theta (X_ i)).$$\n",
+    "Therefore, as shown above, while we cannot find $\\theta$ that minimizes $KL(P_{\\theta ^*}, P_{{\\theta }})$, we can find $\\theta$ that minimizes $\\hat{\\text {KL}}(P_{\\theta ^*}, P_\\theta )$.\n",
     "\n",
-    "$$\\hat{\\text {KL}}(P_{\\theta ^*}, P_\\theta ) := \\mathbb {E}_{\\theta ^*}[\\ln p_{\\theta ^*} ] - \\displaystyle \\frac{1}{n} \\sum _{i = 1}^ n \\ln (p_\\theta (X_ i)).$$"
+    "# Maximum Likelihood"
    ]
   },
   {
