--- a/Statistics/Lecture6.ipynb
+++ b/Statistics/Lecture6.ipynb
@@ -54,14 +54,8 @@
     "$$ 'constant' - \\mathbb {E}_{\\theta ^*}[\\ln p_\\theta (X)]$$\n",
     "By the law of large numbers, $\\displaystyle \\frac{1}{n} \\sum _{i = 1}^ n \\ln (p_\\theta (X_ i)) \\to \\mathbb {E}_{\\theta ^*}[\\ln p_\\theta ]$ in probability\n",
     "$$\\hat{\\text {KL}}(P_{\\theta ^*}, P_\\theta ) := \\mathbb {E}_{\\theta ^*}[\\ln p_{\\theta ^*}(X) ] - \\displaystyle \\frac{1}{n} \\sum _{i = 1}^ n \\ln (p_\\theta (X_ i)).$$\n",
-    "Therefore, as shown above, while we cannot find $\\theta$ that minimizes $KL(P_{\\theta ^*}, P_{{\\theta }})$, we can find $\\theta$ that minimizes $\\hat{\\text {KL}}(P_{\\theta ^*}, P_\\theta )$."
-   ],
-   "id": "f941a9e5cf280eca"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
+    "Therefore, as shown above, while we cannot find $\\theta$ that minimizes $KL(P_{\\theta ^*}, P_{{\\theta }})$, we can find $\\theta$ that minimizes $\\hat{\\text {KL}}(P_{\\theta ^*}, P_\\theta )$.\n",
+    "\n",
     "## Maximum Likelihood principle\n",
     "$$\\hat{\\text {KL}}(P_{\\theta ^*}, P_\\theta ) := \\mathbb {E}_{\\theta ^*}[\\ln p_{\\theta ^*}(X) ] - \\displaystyle \\frac{1}{n} \\sum _{i = 1}^ n \\ln (p_\\theta (X_ i)).$$\n",
     "$$\n",
@@ -73,7 +67,7 @@
     "\\end{align}\n",
     "$$"
    ],
-   "id": "cb2e7a6cfe471bd4"
+   "id": "f941a9e5cf280eca"
   },
   {
    "metadata": {},
