--- a/Statistics/Lecture6.ipynb
+++ b/Statistics/Lecture6.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "## Properties\n",
     "$TV(\\mathbf{P}, \\mathbf{Q}) = TV(\\mathbf{Q}, \\mathbf{P})$ (symmetric)  \n",
-    "$TV(\\mathbf{P}, \\mathbf{Q}) \\geq 0$ (nonnegative)  \n",
+    "$0 \\leq TV(\\mathbf{P}, \\mathbf{Q}) \\leq 1$ (nonnegative)  \n",
     "$TV(\\mathbf{P}, \\mathbf{Q}) = 0 \\iff \\mathbf{P}= \\mathbf{Q}$(definite)  \n",
     "$TV(\\mathbf{P}, \\mathbf{V}) \\leq TV(\\mathbf{P}, \\mathbf{Q}) + TV(\\mathbf{Q}, \\mathbf{V})$(triangle inequality)  \n",
     "These imply that the total variation is a distance between probability distributions.  \n",
