--- a/Statistics/Lecture7.ipynb
+++ b/Statistics/Lecture7.ipynb
@@ -4,19 +4,41 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Likelihood of a Gaussian Statistical Model\n",
-    "Let $X_1, \\ldots , X_ n \\stackrel{iid}{\\sim } N(\\mu ^*, (\\sigma ^*)^2)$  for some unknown $\\mu ^* \\in \\mathbb {R}, (\\sigma ^*)^2 > 0$. You construct the associated statistical model $\\displaystyle \\left(\\mathbb {R}, \\{ N(\\mu , \\sigma ^2)\\} _{(\\mu , \\sigma ^2) \\in \\mathbb {R} \\times (0, \\infty )}\\right)$.    \n",
-    "1.The likelihood of this model is:$$L_ n\\left(x_1, \\ldots , x_ n, (\\mu , \\sigma ^2)\\right) = \\frac{1}{(\\sigma \\sqrt{2 \\pi })^ n} \\exp \\left(-\\frac{1}{2\\sigma^2} \\sum _{i = 1}^ n (x_i-\\mu)^2\\right)$$\n",
+    "# Maximum Likelihood Estimator\n",
+    "## Definition\n",
     "\n",
-    "\n"
+    "Let $X_1, \\ldots , X_ n \\stackrel{iid}{\\sim } \\mathbf{P}_{\\theta ^*}$ be discrete random variables. We construct a statistical model $(E, \\{ \\mathbf{P}_\\theta \\} _{\\theta \\in \\mathbb {R}})$ where $\\mathbf{P}_\\theta$ has pmf $p_\\theta$. We observe our sample to be $X_1 = x_1, X_2 = x_2, \\ldots , X_ n = x_ n$.   \n",
+    "The maximum likelihood estimator for $\\theta ^*$ is defined to be$$\\hat{\\theta _ n}^{MLE} = \\text {argmax}_{\\theta \\in \\mathbb {R}}L_ n(X_1, \\ldots , X_ n, \\theta )$$\n",
+    "$$\\text where \\quad\tL_ n(X_1, \\ldots , X_ n, \\theta ) = \\left( \\prod _{i = 1}^ n p_\\theta (X_ i) \\right).$$\n",
+    "Remark (Log-likelihood estimator): In practice, we use the fact that$$\\theta_n^{MLE} = {argmax}_{\\theta \\in \\mathbb {R}}\\ln L_ n(X_1, \\ldots , X_ n, \\theta )$$\n",
+    "\n",
+    "## Interpretation of MLE\n",
+    "* MLE is the value of $\\theta$ that maximizes the probability that $\\mathbf{P}_\\theta$ generates the data set $(x_1, \\ldots , x_ n)$.  \n",
+    "  Since the likelihood is the joint density of $n$ iid samples from $\\mathbf{P}_\\theta$,$$\\mathbf{P}_\\theta [X_1 = x_1, \\ldots , X_ n = x_ n] = L_ n(x_1, \\ldots , x_ n, \\theta ).$$\n",
+    "  Hence, the MLE finds \\hat{\\theta }_ n that maximizes the probability that $x_1, \\ldots , x_ n$ were sampled from $P_{\\hat{\\theta }_ n}$.\n",
+    "* MLE is the value of $\\theta$ that minimizes an estimator of the KL divergence between $\\mathbf{P}_\\theta$ and the true distribution $\\mathbf{P}_{\\theta ^*}$.  \n",
+    "  In fact, this is how the MLE was derived from KL divergence.  \n",
+    "\n",
+    "**Remark**: Under some technical conditions the MLE is a **weakly consistent estimator** for $\\theta ^*$, meaning that the MLE will converge to $\\theta ^*$ in probability under these conditions. However, there are examples of statistical models where the maximum likelihood estimator will not converge to the true parameter.\n",
+    "\n",
+    "## Minimizing and Maximizing Functions\n",
+    "If in addition $g$ is twice differentiable in the interval $I$, i.e. $g^{\\prime \\prime }(x)$ exists for all $x \\in I$, then $g$ is  \n",
+    "concave if and only if $g^{\\prime \\prime }(x) {\\color{blue}{\\leq }}  0$ for all $x \\in I$;  \n",
+    "strictly concave if $g^{\\prime \\prime }(x) {\\color{blue}{<}}  0$ for all $x \\in I$;  \n",
+    "convex if and only if $g^{\\prime \\prime }(x) {\\color{blue}{\\geq }}  0$ for all $x \\in I$;  \n",
+    "strictly convex if $g^{\\prime \\prime }(x) {\\color{blue}{>}}  0$ for all $x \\in I$;  \n",
+    "\n",
+    "Strictly concave functions are easy to maximize: if they have a maximum, then it is unique. It is the unique solution to$$h^′(\\theta)=0$$\n",
+    "or, in the multivariate case$$\\nabla h(\\theta) = 0 \\in \\mathbb{R}^d$$\n",
+    "There are many algorithms to find it numerically: this is the theory of \"convex optimization\". In this class, often a closed form formula for the maximum."
    ],
    "id": "6fbd8031fba253f1"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
-   "id": "1eb7363488fd4999"
+   "source": "# Examples ",
+   "id": "fde83f97381de530"
   }
  ],
  "metadata": {
