--- a/Statistics/Lecture7.ipynb
+++ b/Statistics/Lecture7.ipynb
@@ -15,7 +15,7 @@
     "## Interpretation of MLE\n",
     "* MLE is the value of $\\theta$ that maximizes the probability that $\\mathbf{P}_\\theta$ generates the data set $(x_1, \\ldots , x_ n)$.  \n",
     "  Since the likelihood is the joint density of $n$ iid samples from $\\mathbf{P}_\\theta$,$$\\mathbf{P}_\\theta [X_1 = x_1, \\ldots , X_ n = x_ n] = L_ n(x_1, \\ldots , x_ n, \\theta ).$$\n",
-    "  Hence, the MLE finds \\hat{\\theta }_ n that maximizes the probability that $x_1, \\ldots , x_ n$ were sampled from $P_{\\hat{\\theta }_ n}$.\n",
+    "  Hence, the MLE finds $\\hat{\\theta }_ n$ that maximizes the probability that $x_1, \\ldots , x_ n$ were sampled from $P_{\\hat{\\theta }_ n}$.\n",
     "* MLE is the value of $\\theta$ that minimizes an estimator of the KL divergence between $\\mathbf{P}_\\theta$ and the true distribution $\\mathbf{P}_{\\theta ^*}$.  \n",
     "  In fact, this is how the MLE was derived from KL divergence.  \n",
     "\n",
