--- a/Statistics/Lecture11.ipynb
+++ b/Statistics/Lecture11.ipynb
@@ -1,16 +1,151 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "# Parametric Hypothesis Testing\n",
+    "## Statistical formulation:\n",
+    "* Consider a sample $\\, X_1,\\, \\ldots ,\\, X_ n\\,$ of i.i.d. random variables and a statistical model $(\\mathbb E,(\\mathbf{P}_\\theta) \\theta \\in \\Theta)$\n",
+    "* **Let $\\Theta_0$ and $\\Theta_1$ be disjoint subsets of $\\Theta$**.\n",
+    "* Conside the two hypotheses: $\\begin{cases} H_0 &: \\theta \\in \\Theta_0\\\\H_1 &: \\theta \\in \\Theta_1\\end{cases}$\n",
+    "* $H_0$ is the **null hypothesis**, $H_1$ is the **alternative hypothesis**.\n",
+    "* If we believe that the true $\\theta$ is either in $\\Theta_0$ or in $\\Theta_1$, we may want to **test $H_0$ against $H_1$**.\n",
+    "* We want to decide whether to **reject** $H_0$(look for evidence against $H_0$ in the data.)\n",
+    "\n",
+    "If $\\Theta_1$ lies on only one side of $\\Theta_0$, this is called a one sided test. If $\\Theta_1$ lies on both sides of $\\Theta_0$, this is called a two sided test.\n",
+    "\n",
+    "Remark:\n",
+    "\n",
+    "Suppose the question is \"whether this hospital has longer waiting time than average?\" We state the hypothesis as $H_0:\\mu≤30;H1:\\mu>30$, where H1 is what we are looking for evidence in the data to show. Intuitively, if it is \"innocnet\" at the end, we did not find enough evidence to prove that it is \"guilty\". And the burden is on the trial to bring evidence. But if you walk away free, it does not mean that it is \"innocnet\". It is just that we were not able to bring enough evidence.\n",
+    "\n",
+    "Regardless of the data, our conclusion will never be to **accept** the null. On observing the data, we will either **reject** the null in favor of the alternative OR we will **fail to reject** the null. In the latter case, we are not claiming that the null is true, rather we are stating that the data does not provide us with enough evidence to refute the null hypothesis.\n",
+    "\n",
+    "## Asymmetry Asymmetry in the hypothesis\n",
+    "* $H_0$ and $H_1$ do not play a symmetric role: the data is only used to try to disprove $H_0$\n",
+    "* In particular lack of evidence, does not mean that $H_0$ is true (\" innocent until proven guilty\")\n",
+    "* A (statistical) test is a statistic $\\psi \\in \\{0,1\\}$, which does not depend explicitly on the value of true unknown parameter, such that:\n",
+    "  * If ψ=0, $H_0$ is not rejected.\n",
+    "  * If ψ=1, $H_0$ is rejected.\n",
+    "\n",
+    "##  Type 1/2 Error and Power of a Statistical Test\n",
+    "* Rejection region of a test $\\psi$:$$R_\\psi=\\{x \\in E^n:\\psi(x)=1\\}$$\n",
+    "Rejection region of test $\\psi_n$:$$R_{\\psi_n} :=\\{(x_1,…,x_n) \\in E^n :\\psi_n(x_1,…,x_n)=1\\}$$\n",
+    "where $E$ is the sample space of the i.i.d. variables $X_i$, which is $\\mathbb R_{≥0}$ in this example since $X_i$ are uniform random variables.\n",
+    "\n",
+    "* Type 1 error of a test $\\psi$ (rejecting $H_0$ when it is actually true):\n",
+    "$$\n",
+    "\\begin{align} \n",
+    "\\alpha_\\psi:\\Theta_0&\\to \\mathbb R\\\\\n",
+    "\\theta & \\mapsto \\mathbb P_\\theta [\\psi = 1]\n",
+    "\\end{align}\n",
+    "$$\n",
+    "Type 1 error of test $\\psi_n$ (rejecting $H_0$ when it is actually true):\n",
+    "$$\n",
+    "\\begin{align} \n",
+    "\\alpha_{\\psi_n}:\\Theta_0&\\to \\mathbb R\\\\\n",
+    "\\theta & \\mapsto \\mathbb P_\\theta [\\psi_n = 1]\n",
+    "\\end{align}\n",
+    "$$\n",
+    "Where $P_\\theta (\\psi_n=1)$ is the probability of the event $\\psi_n=1$ under the probability distribution $\\mathbf{P}_\\theta$ when $\\theta \\in \\Theta_0$, i.e. the probability of rejecting $H_0$  when $H_0$ is true.  \n",
+    "* Type 2 error of a test $\\psi$ (not rejecting $H_0$ although $H_1$ is actually true):\n",
+    "$$\n",
+    "\\begin{align} \n",
+    "\\beta_\\psi:\\Theta_1&\\to \\mathbb R\\\\\n",
+    "\\theta & \\mapsto \\mathbb P_\\theta [\\psi = 0]\n",
+    "\\end{align}\n",
+    "$$\n",
+    "Type 2 error of test $\\psi_n$ (not rejecting $H_0$ although $H_1$ is actually true):\n",
+    "$$\n",
+    "\\begin{align} \n",
+    "\\beta_{\\psi_n}:\\Theta_1&\\to \\mathbb R\\\\\n",
+    "\\theta & \\mapsto \\mathbb P_\\theta [\\psi_n = 0]\n",
+    "\\end{align}\n",
+    "$$\n",
+    "Where $P_\\theta (\\psi_n=0)$ is the probability of the event $\\psi_n=0$ under the probability distribution $\\mathbf{P}_\\theta$  when $\\theta \\in \\Theta_1$, i.e. the probability of not rejecting $H_0$ when $H_1$ is true.\n",
+    "* Power of a test $\\psi$:$$\\pi_\\psi = \\mathop{}_{\\theta \\in \\Theta_1}^{\\inf} (1−\\beta_\\psi(\\theta)) $$\n",
+    "we want power of error of type 1 to be small, power of error of type 2 to be large.\n",
+    "\n",
+    "## Level\n",
+    "a和c转换\n",
+    "\"Level\" is a very important notion. When building a test, we say “build a test at level α.”\n",
+    "\n",
+    "* A test $\\psi$ has level $\\alpha$ if $$\\alpha_\\psi(\\theta)≤\\alpha,\\ \\forall \\theta \\in \\Theta_0$$\n",
+    "\n",
+    "* A test $\\psi$ has asymptotic level $\\alpha$ if $$\\alpha_\\psi(\\theta)≤\\alpha,\\ \\forall \\theta \\in \\Theta_0$$\n",
+    "Where $\\alpha_\\psi=\\mathbf{P}_\\theta(\\psi=1)$ is the type 1 error. We will use the word \"level\" to mean the \"smallest\" such level, i.e. the least upper bound of the type 1 error, defined as follows$$\\alpha=\\sup_{\\theta \\in \\Theta_0}\\alpha_\\psi(\\theta)$$\n",
+    "Here, $\\sup_{\\theta \\in \\Theta_0}$ stands for the supremum over all values of $\\theta$ within $\\Theta_0$. If $\\Theta_0$ is a closed (resp. closed half-interval), and if $\\alpha_\\psi(\\theta)$ is continuous (resp. continuous and decreasing as it approaches infinity), then its supremum equals the maximum.\n",
+    "* In general, a test has the form $$\\psi=1\\{T_n >c\\}$$\n",
+    "For some statistic $T_n$ and threshold $c\\in \\mathbb R$.\n",
+    "* $T_n$ is called the test statistic. The rejection region is $\\mathbb R_\\psi={T_n >c}$.\n",
+    "\n",
+    "## The p-value\n",
+    "* Definition of p-value:  \n",
+    "The (asymptotic) p-value of a test $\\psi_\\alpha$ is the smallest (asymptotic) level $\\alpha$ at which $\\psi_\\alpha$  rejects $H_0$. It is random, it depends on the sample.\n",
+    "* Golden rule  \n",
+    "P-value ≤$\\alpha \\iff H_0$ is rejected by $\\psi_\\alpha$, at the (asymptotic) level $\\alpha$.  \n",
+    "The smaller the p-value, the more confidently one can reject $H_0$."
+   ],
+   "id": "9a9553c3cc8e9143"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Solution By Steps\n",
+    "Step 1: Wald Test Statistic The Wald test statistic is given by:\n",
+    "W= \n",
+    "I(θ)\n",
+    "( \n",
+    "θ\n",
+    "^\n",
+    " −θ \n",
+    "0\n",
+    "​\n",
+    " ) \n",
+    "2\n",
+    " \n",
+    "​\n",
+    " \n",
+    "where:\n",
+    "\n",
+    "θ\n",
+    "^\n",
+    "  is the maximum likelihood estimator of θ,\n",
+    "θ \n",
+    "0\n",
+    "​\n",
+    "  is the hypothesized value under the null hypothesis (θ \n",
+    "0\n",
+    "​\n",
+    " =1 in this case),\n",
+    "I(θ) is the Fisher information.\n",
+    "Step 2: Fisher Information The Fisher information is defined as:\n",
+    "I(θ)=−E[ \n",
+    "∂θ \n",
+    "2\n",
+    " \n",
+    "∂ \n",
+    "2\n",
+    " \n",
+    "​\n",
+    " logf(X∣θ)]\n",
+    "where:\n",
+    "\n",
+    "f(X∣θ) is the probability density function of the distribution.\n",
+    "Step 3: Asymptotic p-value The asymptotic p-value for a two-tailed test is computed as:\n",
+    "p=2×P(Z>∣W∣)\n",
+    "where Z is a standard normal random variable.\n",
+    "\n",
+    "Final Answer\n",
+    "The asymptotic p-value of the Wald test is computed using the Wald test statistic and the Fisher information.\n",
+    "\n",
+    "Key Concept\n",
+    "Wald Test for Hypothesis Testing\n",
+    "\n",
+    "Key Concept Explanation"
+   ],
+   "id": "521f22371d7e1afa"
   }
  ],
  "metadata": {
