--- a/Statistics/Lecture12.ipynb
+++ b/Statistics/Lecture12.ipynb
@@ -1,16 +1,173 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "Let's solve this step by step to determine whether each statement is true or false.\n",
+    "\n",
+    "Step 1: Understanding the Uniform Prior\n",
+    "The given prior π(a) = 1 for all a ∈ ℝ is an improper uniform prior\n",
+    "A uniform prior assigns equal probability to all possible values\n",
+    "In this case, π(a) = 1 is constant across the entire real line\n",
+    "This matches the definition of a uniform prior\n",
+    "Step 2: First Statement - Is π(a) a uniform prior?\n",
+    "Since π(a) = 1 for all a ∈ ℝ\n",
+    "This assigns equal weight to all possible values of a\n",
+    "This is precisely the definition of a uniform prior\n",
+    "Therefore, this statement is TRUE\n",
+    "Step 3: Understanding Jeffreys Prior\n",
+    "Jeffreys prior is proportional to the square root of Fisher Information\n",
+    "For a Gaussian linear model Y = aX + ε:\n",
+    "The likelihood is L(Y|a,X) ∝ exp(-(y-ax)²/(2σ²))\n",
+    "Fisher Information I(a) = (x²/σ²)\n",
+    "Jeffreys prior would be π(a) ∝ √(x²/σ²) = |x|/σ\n",
+    "Step 4: Second Statement - Is π(a) a Jeffreys prior?\n",
+    "The given prior π(a) = 1 is constant\n",
+    "Jeffreys prior would be proportional to |x|/σ\n",
+    "These are not equivalent\n",
+    "Therefore, this statement is FALSE\n",
+    "Final Answer\n",
+    "\"π(a) is a uniform prior\" - TRUE\n",
+    "\"π(a) is a Jeffreys prior\" - FALSE\n",
+    "Answered Dec 14 at 18:36"
+   ],
+   "id": "8a7efe6f44eab1d9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Let's solve this step by step.\n",
+    "\n",
+    "Step 1: Understanding\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    "  (Least Squares Estimator)\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    " =(X\n",
+    "T\n",
+    " X)\n",
+    "−1\n",
+    " X\n",
+    "T\n",
+    " Y\n",
+    "This is derived by minimizing (Y−Xβ)\n",
+    "T\n",
+    " (Y−Xβ)\n",
+    "Note: No distributional assumptions were made about ϵ\n",
+    "Step 2: Evaluating Statement 1\n",
+    "Maximum likelihood estimator (MLE) requires distributional assumptions\n",
+    "No distribution was specified for ϵ (only mean and variance)\n",
+    "Without knowing distribution, we cannot determine MLE\n",
+    "Answer: FALSE\n",
+    "Step 3: Evaluating Statement 2\n",
+    "X is n×p\n",
+    "Y is n×1\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    " =(X\n",
+    "T\n",
+    " X)\n",
+    "−1\n",
+    " X\n",
+    "T\n",
+    " Y\n",
+    "(X\n",
+    "T\n",
+    " X)\n",
+    "−1\n",
+    "  is p×p\n",
+    "X\n",
+    "T\n",
+    "  is p×n\n",
+    "Y is n×1\n",
+    "Therefore,\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    "  is p×1 (column vector)\n",
+    "Answer: FALSE\n",
+    "Step 4: Evaluating Statement 3\n",
+    "Without normality assumption on ϵ\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    "  is not necessarily Gaussian\n",
+    "Gaussian distribution would only follow if ϵ were normal\n",
+    "Answer: FALSE\n",
+    "Step 5: Evaluating X\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    "  Statements\n",
+    "X\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    " =X(X\n",
+    "T\n",
+    " X)\n",
+    "−1\n",
+    " X\n",
+    "T\n",
+    " Y ≠ (X\n",
+    "T\n",
+    " X)\n",
+    "−1\n",
+    " X\n",
+    "T\n",
+    " Y\n",
+    "\n",
+    "FALSE\n",
+    "E[X\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    " ]=Xβ\n",
+    "\n",
+    "TRUE (unbiased)\n",
+    "X\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    "  is in R\n",
+    "n\n",
+    "  (not $\\mathbb{R}^p$)\n",
+    "\n",
+    "X is n×p and\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    "  is p×1\n",
+    "Therefore X\n",
+    "β\n",
+    "^\n",
+    "​\n",
+    "  is n×1\n",
+    "FALSE\n",
+    "Final Answer\n",
+    "False\n",
+    "False\n",
+    "False\n",
+    "For $X\\hat{\\beta}$: Only \"An unbiased estimator of $X\\beta$\" is correct.\n",
+    "Answered Dec 14 at 18:40\n",
+    "\n",
+    "StudyX AI with Advanced Model\n",
+    "\n",
+    "Helpful"
+   ],
+   "id": "244ca4fdf9e3aa52"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "27f87173a1314520"
   }
  ],
  "metadata": {
