--- a/Statistics/Lecture12.ipynb
+++ b/Statistics/Lecture12.ipynb
@@ -38,128 +38,297 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Let's solve this step by step.\n",
+    "To check if the AR(3) process is stable, we need to determine if the roots of the characteristic equation lie outside the unit circle. The characteristic equation is obtained by setting the denominator of the transfer function H(q) to zero.\n",
     "\n",
-    "Step 1: Understanding\n",
-    "β\n",
-    "^\n",
+    "The given AR(3) process is:\n",
+    "X(t)= \n",
+    "2\n",
+    "3\n",
     "​\n",
-    "  (Least Squares Estimator)\n",
-    "β\n",
-    "^\n",
+    " X(t−1)− \n",
+    "4\n",
+    "3\n",
     "​\n",
-    " =(X\n",
-    "T\n",
-    " X)\n",
-    "−1\n",
-    " X\n",
-    "T\n",
-    " Y\n",
-    "This is derived by minimizing (Y−Xβ)\n",
-    "T\n",
-    " (Y−Xβ)\n",
-    "Note: No distributional assumptions were made about ϵ\n",
-    "Step 2: Evaluating Statement 1\n",
-    "Maximum likelihood estimator (MLE) requires distributional assumptions\n",
-    "No distribution was specified for ϵ (only mean and variance)\n",
-    "Without knowing distribution, we cannot determine MLE\n",
-    "Answer: FALSE\n",
-    "Step 3: Evaluating Statement 2\n",
-    "X is n×p\n",
-    "Y is n×1\n",
-    "β\n",
-    "^\n",
+    " X(t−2)+ \n",
+    "8\n",
+    "1\n",
     "​\n",
-    " =(X\n",
-    "T\n",
-    " X)\n",
-    "−1\n",
-    " X\n",
-    "T\n",
-    " Y\n",
-    "(X\n",
-    "T\n",
-    " X)\n",
-    "−1\n",
-    "  is p×p\n",
+    " X(t−3)+ϵ(t)\n",
+    "\n",
+    "First, we take the q-transform of both sides of the equation. The q-transform of X(t) is  \n",
     "X\n",
-    "T\n",
-    "  is p×n\n",
-    "Y is n×1\n",
-    "Therefore,\n",
-    "β\n",
-    "^\n",
-    "​\n",
-    "  is p×1 (column vector)\n",
-    "Answer: FALSE\n",
-    "Step 4: Evaluating Statement 3\n",
-    "Without normality assumption on ϵ\n",
-    "β\n",
-    "^\n",
-    "​\n",
-    "  is not necessarily Gaussian\n",
-    "Gaussian distribution would only follow if ϵ were normal\n",
-    "Answer: FALSE\n",
-    "Step 5: Evaluating X\n",
-    "β\n",
-    "^\n",
-    "​\n",
-    "  Statements\n",
-    "X\n",
-    "β\n",
-    "^\n",
-    "​\n",
-    " =X(X\n",
-    "T\n",
-    " X)\n",
+    "ˉ\n",
+    " (q) and the q-transform of ϵ(t) is  \n",
+    "E\n",
+    "ˉ\n",
+    " (q). The q-transform of X(t−1) is q \n",
     "−1\n",
-    " X\n",
-    "T\n",
-    " Y ≠ (X\n",
-    "T\n",
-    " X)\n",
-    "−1\n",
-    " X\n",
-    "T\n",
-    " Y\n",
-    "\n",
-    "FALSE\n",
-    "E[X\n",
-    "β\n",
-    "^\n",
-    "​\n",
-    " ]=Xβ\n",
-    "\n",
-    "TRUE (unbiased)\n",
+    "  \n",
     "X\n",
-    "β\n",
-    "^\n",
+    "ˉ\n",
+    " (q), the q-transform of X(t−2) is q \n",
+    "−2\n",
+    "  \n",
+    "X\n",
+    "ˉ\n",
+    " (q), and the q-transform of X(t−3) is q \n",
+    "−3\n",
+    "  \n",
+    "X\n",
+    "ˉ\n",
+    " (q). Therefore, the equation becomes:\n",
+    "X\n",
+    "ˉ\n",
+    " (q)= \n",
+    "2\n",
+    "3\n",
     "​\n",
-    "  is in R\n",
-    "n\n",
-    "  (not $\\mathbb{R}^p$)\n",
-    "\n",
-    "X is n×p and\n",
-    "β\n",
-    "^\n",
+    " q \n",
+    "−1\n",
+    "  \n",
+    "X\n",
+    "ˉ\n",
+    " (q)− \n",
+    "4\n",
+    "3\n",
     "​\n",
-    "  is p×1\n",
-    "Therefore X\n",
-    "β\n",
-    "^\n",
+    " q \n",
+    "−2\n",
+    "  \n",
+    "X\n",
+    "ˉ\n",
+    " (q)+ \n",
+    "8\n",
+    "1\n",
     "​\n",
-    "  is n×1\n",
-    "FALSE\n",
-    "Final Answer\n",
-    "False\n",
-    "False\n",
-    "False\n",
-    "For $X\\hat{\\beta}$: Only \"An unbiased estimator of $X\\beta$\" is correct.\n",
-    "Answered Dec 14 at 18:40\n",
+    " q \n",
+    "−3\n",
+    "  \n",
+    "X\n",
+    "ˉ\n",
+    " (q)+ \n",
+    "E\n",
+    "ˉ\n",
+    " (q)\n",
     "\n",
-    "StudyX AI with Advanced Model\n",
+    "We can factor out  \n",
+    "X\n",
+    "ˉ\n",
+    " (q) on the right-hand side:\n",
+    "X\n",
+    "ˉ\n",
+    " (q)=( \n",
+    "2\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−1\n",
+    " − \n",
+    "4\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−2\n",
+    " + \n",
+    "8\n",
+    "1\n",
+    "​\n",
+    " q \n",
+    "−3\n",
+    " ) \n",
+    "X\n",
+    "ˉ\n",
+    " (q)+ \n",
+    "E\n",
+    "ˉ\n",
+    " (q)\n",
     "\n",
-    "Helpful"
+    "Next, we isolate  \n",
+    "X\n",
+    "ˉ\n",
+    " (q) by subtracting ( \n",
+    "2\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−1\n",
+    " − \n",
+    "4\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−2\n",
+    " + \n",
+    "8\n",
+    "1\n",
+    "​\n",
+    " q \n",
+    "−3\n",
+    " ) \n",
+    "X\n",
+    "ˉ\n",
+    " (q) from both sides:\n",
+    "X\n",
+    "ˉ\n",
+    " (q)−( \n",
+    "2\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−1\n",
+    " − \n",
+    "4\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−2\n",
+    " + \n",
+    "8\n",
+    "1\n",
+    "​\n",
+    " q \n",
+    "−3\n",
+    " ) \n",
+    "X\n",
+    "ˉ\n",
+    " (q)= \n",
+    "E\n",
+    "ˉ\n",
+    " (q)\n",
+    "\n",
+    "We can factor out  \n",
+    "X\n",
+    "ˉ\n",
+    " (q) on the left-hand side:\n",
+    "(1− \n",
+    "2\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−1\n",
+    " + \n",
+    "4\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−2\n",
+    " − \n",
+    "8\n",
+    "1\n",
+    "​\n",
+    " q \n",
+    "−3\n",
+    " ) \n",
+    "X\n",
+    "ˉ\n",
+    " (q)= \n",
+    "E\n",
+    "ˉ\n",
+    " (q)\n",
+    "\n",
+    "Finally, we solve for  \n",
+    "X\n",
+    "ˉ\n",
+    " (q) by dividing both sides by 1− \n",
+    "2\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−1\n",
+    " + \n",
+    "4\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−2\n",
+    " − \n",
+    "8\n",
+    "1\n",
+    "​\n",
+    " q \n",
+    "−3\n",
+    " :\n",
+    "X\n",
+    "ˉ\n",
+    " (q)= \n",
+    "1− \n",
+    "2\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−1\n",
+    " + \n",
+    "4\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−2\n",
+    " − \n",
+    "8\n",
+    "1\n",
+    "​\n",
+    " q \n",
+    "−3\n",
+    " \n",
+    "1\n",
+    "​\n",
+    "  \n",
+    "E\n",
+    "ˉ\n",
+    " (q)\n",
+    "\n",
+    "Thus, the transfer function H(q) is:\n",
+    "H(q)= \n",
+    "1− \n",
+    "2\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−1\n",
+    " + \n",
+    "4\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−2\n",
+    " − \n",
+    "8\n",
+    "1\n",
+    "​\n",
+    " q \n",
+    "−3\n",
+    " \n",
+    "1\n",
+    "​\n",
+    " \n",
+    "\n",
+    "The correct answer is:\n",
+    "1− \n",
+    "2\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−1\n",
+    " + \n",
+    "4\n",
+    "3\n",
+    "​\n",
+    " q \n",
+    "−2\n",
+    " − \n",
+    "8\n",
+    "1\n",
+    "​\n",
+    " q \n",
+    "−3\n",
+    " \n",
+    "1\n",
+    "​\n",
+    " \n",
+    "​\n",
+    " \n",
+    "\n",
+    "iconSee Full Answer"
    ],
    "id": "244ca4fdf9e3aa52"
   },
